[package]
name = "async_rate_limiter"
version = "0.1.0"
edition = "2021"


[profile.release]
lto = "fat"
codegen-units = 1
build-override.codegen-units = 1


[build-dependencies]
tonic-build = "0.12.3"


[dependencies]
clap = { version = "4.5.20", features = ["derive"], optional = true }
prost = "0.13.3"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "sync", "time"] }
tonic = "0.12.3"


[features]
server_bin = [
    "dep:clap",
]


[[bin]]
name = "server"
path = "bin/server.rs"
required-features = ["server_bin"]
